# ngsolve

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile.am  Makefile.in  PARALLEL.HOWTO  README  README.md  aclocal.m4  before_we_start.ipynb  config.h.cmake  config.h.in  configure  configure.ac  configure.in  convert.py  doxymain  i-tutorial.ipynb  index.ipynb  itut.patch  logo.icns  netgen.icns  ngs.dxx  ngs_defines.hpp  ngscxx  ngsolve.tcl  pyproject.toml  setup.py
basiclinalg/: CMakeLists.txt  LUdecomposition.cpp  LapackGEP.cpp  LapackInterface.hpp  Makefile.am  Makefile.in  arch.hpp  avector.cpp  avector.hpp  bandmatrix.cpp  bandmatrix.hpp  bla.hpp  bla.py  calcinverse.cpp  calcinverse.hpp  check_simd_size.cpp  cholesky.cpp  cholesky.hpp  clapack.h  complex_wrapper.hpp  cuda_bla.hpp  ectypes.hpp  eigensystem.cpp  eigensystem.hpp  expr.hpp  generate_mat_kernels.cpp  get_simd_size.cpp  householder.cpp  householder.hpp  matkernel.hpp  matrix.hpp  md.hpp  ng_clapack.h  ng_lapack.hpp  ngbla.dxx  ngbla_main.dxx  ngblas.cpp  ngblas.hpp  ngblasc.cpp  python_bla.cpp  (+10 more)
bem/: CMakeLists.txt  analytic_integrals.cpp  analytic_integrals.hpp  bem_diffops.hpp  diffopwithfactor.hpp  fmmoperator.hpp  intop_parameters.hpp  intrules_SauterSchwab.cpp  intrules_SauterSchwab.hpp  kernels.hpp  mp_coefficient.hpp  mptools.cpp  mptools.hpp  ngbem.cpp  ngbem.hpp  potentialcf.cpp  potentialcf.hpp  potentialtools.cpp  potentialtools.hpp  python_bem.cpp
comp/: CMakeLists.txt  HCTspace.cpp  HCTspace.hpp  Hddf.cpp  Hddf.hpp  JKMspace.cpp  JKMspace.hpp  Makefile.am  Makefile.in  applymassl2.hpp  basenumproc.cpp  bddc.cpp  bddc.hpp  bilinearform.cpp  bilinearform.hpp  blocked_gridfunction.hpp  comp.dxx  comp.hpp  comp_utils.hpp  compressedfespace.cpp  compressedfespace.hpp  contact.cpp  contact.hpp  discontinuous.cpp  discontinuous.hpp  facetfespace.cpp  facetfespace.hpp  facetsurffespace.cpp  facetsurffespace.hpp  fesconvert.cpp  fesconvert.hpp  fespace.cpp  fespace.hpp  globalhermitefespace.cpp  globalhermitefespace.hpp  globalinterfacespace.cpp  globalinterfacespace.hpp  globalspace.cpp  globalspace.hpp  gridfunction.cpp  (+98 more)
docs/: CMakeLists.txt  conf.py  index.rst
emscripten/: CMakeLists.txt  em_ngs.cpp  example.ipynb
external_dependencies/: CMakeLists.txt
fem/: CMakeLists.txt  DGIntegrators.cpp  Distribution.cpp  Distribution.hpp  Makefile.am  Makefile.in  avector.hpp  bdbequations.cpp  bdbequations.hpp  bdbintegrator.hpp  code_generation.cpp  code_generation.hpp  coefficient.cpp  coefficient.hpp  coefficient_geo.cpp  coefficient_impl.hpp  coefficient_matrix.cpp  coefficient_matrix.hpp  coefficient_stdmath.cpp  coefficient_stdmath.hpp  differentialoperator.hpp  diffop.cpp  diffop.hpp  diffop_grad.cpp  diffop_hesse.cpp  diffop_id.cpp  diffop_impl.hpp  dynamicmem.cpp  elasticity_equations.hpp  elementtopology.cpp  elementtopology.hpp  elementtransformation.cpp  elementtransformation.hpp  facetfe.cpp  facetfe.hpp  facethofe.cpp  facethofe.hpp  fastmat.cpp  fastmat.hpp  fe_interfaces.hpp  (+129 more)
linalg/: CMakeLists.txt  Makefile.am  Makefile.in  arnoldi.cpp  arnoldi.hpp  basematrix.cpp  basematrix.hpp  basescalar.hpp  basevector.cpp  basevector.hpp  blockjacobi.cpp  blockjacobi.hpp  cg.cpp  cg.hpp  chebyshev.cpp  chebyshev.hpp  commutingAMG.cpp  commutingAMG.hpp  concurrentqueue.h  cuda_linalg.cpp  cuda_linalg.hpp  diagonalmatrix.cpp  diagonalmatrix.hpp  eigen.cpp  eigen.hpp  elementbyelement.cpp  elementbyelement.hpp  jacobi.cpp  jacobi.hpp  la.hpp  la.py  multivector.cpp  multivector.hpp  mumpsinverse.cpp  mumpsinverse.hpp  ngla.dxx  ngla_main.dxx  order.cpp  order.hpp  paralleldofs.cpp  (+25 more)
multigrid/: CMakeLists.txt  Makefile.am  Makefile.in  mgpre.cpp  mgpre.hpp  multigrid.hpp  prolongation.cpp  prolongation.hpp  smoother.cpp  smoother.hpp
my_little_ngsolve/: Makefile  Makefile.am  all_in_one.cpp  all_in_one.pde  coupling.pde  demo_coupling.cpp  demo_coupling_adv.cpp  demo_instat.cpp  demo_nonlinear.cpp  demo_stokes.cpp  instat.pde  linhyp.pde  linhypDG.cpp  linhypDG_par.cpp  myAssembling.cpp  myElement.cpp  myElement.hpp  myFESpace.cpp  myFESpace.hpp  myHOElement.cpp  myHOElement.hpp  myHOFESpace.cpp  myHOFESpace.hpp  myIntegrator.cpp  myIntegrator.hpp  myPreconditioner.cpp  my_assembling.cpp  my_assembling.pde  nonlinear.pde  numproc_template.cpp  precond.pde  simple.pde  simple_test.pde  square.vol  stokes.pde
ng/: CMakeLists.txt  Makefile.am  Makefile.in  acisgeom.tcl  csgeom.tcl  demoview.cpp  demoview.hpp  dialog.tcl  drawing.tcl  drawing_togl17.tcl  fonts.hpp  main.cpp  menustat.tcl  netgen.ocf  netgenpy.cpp  ng.tcl  ng_acis.hpp  ngappinit.cpp  nghelp.tcl  ngicon.tcl  nginterface.cpp  nginterface_v2.cpp  ngpkg.cpp  ngshell.tcl  ngtesting.tcl  ngvisual.tcl  occgeom.tcl  onetcl.cpp  parallelfunc.cpp  parallelfunc.hpp  parallelinterface.cpp  parameters.tcl  sockets.tcl  stlgeom.tcl  variables.tcl
nglib/: CMakeLists.txt  Makefile.am  Makefile.in  cube.surf  netgen.py  ng_occ.cpp  ng_stl.cpp  ng_vol.cpp  nglib.cpp  nglib.h  parallelfunc.cpp
ngscuda/: CMakeLists.txt  concurrentqueue.h  cuda_applyIR.cpp  cuda_bla.hpp  cuda_core.hpp  cuda_krylov.cpp  cuda_linalg.cpp  cuda_linalg.hpp  cuda_matrix_free_btdtb.cpp  cuda_ngbla.hpp  cuda_ngstd.cpp  cuda_ngstd.cu  cuda_ngstd.hpp  cuda_profiler.cu  cuda_profiler.hpp  cuda_tasks.cpp  demo1.cpp  dev_blockjacobi.cpp  dev_blockjacobi.cu  dev_sparsecholesky.cpp  dev_sparsecholesky.cu  linalg_kernels.cu  linalg_kernels.hpp  ngs_cudss.cpp  ngs_cudss.hpp  python_ngscuda.cpp  unifiedvector.cpp  unifiedvector.hpp
ngstd/: CMakeLists.txt  Makefile.am  Makefile.in  archive.cpp  archive.hpp  archive_base.hpp  array.hpp  autodiff.hpp  autodiffdiff.hpp  autoptr.hpp  bessel.hpp  bitarray.cpp  bitarray.hpp  blockalloc.cpp  blockalloc.hpp  bspline.cpp  bspline.hpp  cuda_ngstd.cpp  cuda_ngstd.hpp  dynamicmem.hpp  evalfunc.cpp  evalfunc.hpp  exception.cpp  exception.hpp  expr.py  flags.cpp  flags.hpp  hashtable.hpp  init.py  localheap.cpp  localheap.hpp  memusage.hpp  mpiwrapper.hpp  mycomplex.hpp  ngs_utils.cpp  (+39 more)
(+1358 files in other folders)
